.aws/numbuyer-cfn.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: NumBuyer backend infrastracture

Parameters: 
  MyIP:
    Description: IP address allowed to access EC2
    Type: String
    Default: 0.0.0.0/0

Resources:
  # ===============================================================
  # VPC
  # ===============================================================
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: vpc-cf

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw-cf

  # ===============================================================
  # public subnet
  # ===============================================================
  # attach IGW to VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW

  PubSub:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: pub-sub-a-cf

  PubSubRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: pub-sub-a-rt-cf

  # PubSub - Internet routing
  PubSubToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PubSubRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  # attach route table to subnet
  AssoPubSubRT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PubSub
      RouteTableId: !Ref PubSubRT

  # ===============================================================
  # private subnet
  # ===============================================================
  PriSub:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: pri-sub-a-cf
        
  PriSubRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: pri-sub-a-rt-cf

  AssoPriSubRT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PriSub
      RouteTableId: !Ref PriSubRT

  # ===============================================================
  # EC2 (in public subnet)
  # ===============================================================
  EC2: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-00d101850e971728d
      InstanceType: t2.micro
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref PubSub
          GroupSet:
            - !Ref EC2SG
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum -y update
          sudo yum -y install ruby
          sudo yum -y install aws-cli
          cd /home/ec2-user
          wget https://aws-codedeploy-ap-northeast-1.s3.ap-northeast-1.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto
      IamInstanceProfile:
        !Ref EC2Profile
      Tags:
          - Key: Name
            Value: ec2-a-cf

  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ec2-sg-cf
      GroupDescription: Allow SSH and HTTP access only MyIP
      VpcId: !Ref VPC
      SecurityGroupIngress:
        # http
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIP
        # https
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref MyIP
        # ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIP

  # Elastic IP assocition with EC2
  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
  EIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2
      EIP: !Ref ElasticIP

  # Create IAM Role
  EC2S3AccessRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"

  EC2S3AccessPolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: s3access
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action:
            - "s3:Get*"
            - "s3:List*"
            - "s3-object-lambda:Get*"
            - "s3-object-lambda:List*"
          Resource: "*"
      Roles:
      - !Ref EC2S3AccessRole
      
  EC2Profile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref EC2S3AccessRole

  # ===============================================================
  # ElastiCache (in private subnet)
  # ===============================================================
  ECacheSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties: 
      GroupName: numbuyer-elasticache-sg
      GroupDescription: Security Group for Elasticache Redis
      SecurityGroupIngress:
        - 
          IpProtocol: tcp
          CidrIp: '0.0.0.0/0'
          FromPort: 6379
          ToPort: 6379
        - 
          IpProtocol: tcp
          CidrIpv6: '::/0'
          FromPort: 6379
          ToPort: 6379
      Tags:
        - Key: Name
          Value: numbuyer-elasticache-sg
      VpcId: !Ref VPC
  ECacheSubnetGroup:
    Type: "AWS::ElastiCache::SubnetGroup"
    Properties:
      CacheSubnetGroupName: numbuyer-elasticache-subnet-gn
      Description: Redis Subnet Group
      SubnetIds:
        - !Ref PriSub
  ECacheRedis:
    Type: "AWS::ElastiCache::ReplicationGroup"
    Properties:
      AutomaticFailoverEnabled: false
      AutoMinorVersionUpgrade: true
      CacheNodeType: cache.t3.micro
      CacheParameterGroupName: default.redis6.x
      CacheSubnetGroupName: !Ref ECacheSubnetGroup
      Engine: redis
      EngineVersion: 6.2
      NumCacheClusters: 1
      ReplicationGroupDescription: 'Elasticache Redis'
      ReplicationGroupId: numbuyer-elasticache-cluster
      SecurityGroupIds:
        - !Ref ECacheSecurityGroup

  ECacheAddressParameter:
    Type: "AWS::SSM::Parameter"
    Properties:
      Name: "ECacheAddress"
      Type: "String"
      Value: !GetAtt ECacheRedis.PrimaryEndPoint.Address
      Description: "ElastiCache Address"

Outputs:
  EC2PublicIP:
    Value: !GetAtt EC2.PublicIp
    Description: Public IP of EC2 instance
  ElastiCacheAddress:
    Value: !GetAtt ECacheRedis.PrimaryEndPoint.Address
    Description: DNS address of the primary read-write cache node
  ElastiCachePort:
    Value: !GetAtt ECacheRedis.PrimaryEndPoint.Port
    Description: The number of the port that the primary read-write cache engine is listening on
